# ephemera

./: .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  chart.html  deploy.sh  metrics.db
.github/workflows/: deploy.yml
.sqlx/: query-20a67159f8c74860fb28f73ba44a2496f977bfcf5b193b3a785da0e4aeeafd51.json  query-4ad8d378e333029088425687d38c95d097a7654b3e2f6dcd256549a3427bb374.json  query-89530ba7dea7eaa86d574e33adc44cb494fa5de0865a0c5c3b8ea70b7b0495b2.json  query-a90c61a2d5ce674a8d1882f01310df8b3330ed5f984947cf8dfc50e5bd71aee2.json  query-bbd10664a4e89e5398b797821792f023b8157beb301507877eb54d64a10abc43.json  query-c65ef5c27d2223ef55087b57d11c69d1f4a26250086d8741c08ff90648a92cbe.json  query-d4fb881219c7857014fa4a76d3c44b6f4d28a4326bb91ce27ffaab948eecc0e8.json
migrations/: 20240101000000_create_metrics.sql  20240102000000_add_namespaces.sql  20240103000000_remove_owner_token.sql
src/: main.rs
templates/: chart.html  index.html  namespace.html
