[package]
name = "somnial"
version = "0.1.0"
edition = "2024"
description = "Simple time-series metrics collection and visualization service"
authors = ["Your Name <you@example.com>"]

[dependencies]
askama = "0.12"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
